tests/fixtures/invalid/divmod_no_args.py
# divmod() requires at least 2 arguments
x = divmod()
